--- a/index.html
+++ b/index.html
@@ -5,12 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Gift</title>
   <style>
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-    }
-
+    * { margin: 0; padding: 0; box-sizing: border-box; }
     body, html {
       height: 100%;
       font-family: Arial, sans-serif;
@@ -19,13 +14,10 @@
       overflow: hidden;
     }
 
-    /* Launch screen */
     #start-screen {
       position: fixed;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
+      top: 0; left: 0;
+      width: 100%; height: 100%;
       background: black;
       display: flex;
       align-items: center;
@@ -45,16 +37,12 @@
       transition: transform 0.3s ease;
     }
 
-    #start-btn:hover {
-      transform: scale(1.1);
-    }
+    #start-btn:hover { transform: scale(1.1); }
 
     video#bg-video {
       position: fixed;
-      top: 0;
-      left: 0;
-      min-width: 100%;
-      min-height: 100%;
+      top: 0; left: 0;
+      min-width: 100%; min-height: 100%;
       object-fit: cover;
       z-index: -1;
     }
@@ -71,7 +59,6 @@
     }
 
     .rainbow-box h1 {
-      margin: 0;
       font-size: 1.8em;
       background-color: rgba(0, 0, 0, 0.3);
       padding: 10px 20px;
@@ -118,8 +105,7 @@
       z-index: 5;
     }
 
-    .heart::before,
-    .heart::after {
+    .heart::before, .heart::after {
       content: "";
       position: absolute;
       width: 50px;
@@ -128,15 +114,8 @@
       border-radius: 50%;
     }
 
-    .heart::before {
-      top: -25px;
-      left: 0;
-    }
-
-    .heart::after {
-      left: 25px;
-      top: 0;
-    }
+    .heart::before { top: -25px; left: 0; }
+    .heart::after { left: 25px; top: 0; }
 
     @keyframes pulse {
       0% { transform: scale(1) rotate(-45deg); }
@@ -167,19 +146,17 @@
 </head>
 <body>
 
-  <!-- Launch Screen -->
   <div id="start-screen">
     <button id="start-btn">Click Me to Open</button>
   </div>
 
-  <!-- Hidden Content -->
   <div id="main-content" style="display: none;">
     <video id="bg-video" autoplay muted loop>
-      <source src="file:///C:/Users/user/OneDrive/Desktop/MYHTMLPROJECT/vida4.mp4" type="video/mp4" />
+      <source src="vida4.mp4" type="video/mp4" />
     </video>
 
     <audio id="bg-music" loop>
-      <source src="c:/Users/user/OneDrive/Desktop/Ne/Perfect Design.mp3" type="audio/mpeg" />
+      <source src="Perfect%20Design.mp3" type="audio/mpeg" />
     </audio>
 
     <div class="heart"></div>
@@ -190,13 +167,12 @@
     </div>
 
     <div class="slideshow-container">
-      <img class="slides" src="c:/Users/user/OneDrive/Desktop/Ne/pinang1.jpg" alt="First Image" />
-      <img class="slides" src="c:/Users/user/OneDrive/Desktop/Ne/pinang2.jpg" alt="Second Image" />
+      <img class="slides" src="pinang1.jpg" alt="First Image" />
+      <img class="slides" src="pinang2.jpg" alt="Second Image" />
     </div>
   </div>
 
   <script>
-    // Start Screen Transition
     document.getElementById("start-btn").addEventListener("click", function () {
       document.getElementById("start-screen").style.display = "none";
       document.getElementById("main-content").style.display = "block";
@@ -204,7 +180,6 @@
       if (music) music.play();
     });
 
-    // Slideshow
     let index = 0;
     const slides = document.getElementsByClassName("slides");
     function showSlides() {
